thirdparty/boost/libs/numeric/conversion/test/compile_fail/.uuid
bd06e4f1-dc37-4482-b178-f599e385fd64